// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceRanges renders markup with state 1`] = `
<ng-ais-price-ranges
  currency={[Function String]}
  formatLabel={[Function Function]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-PriceRanges"
  >
    
        
    <ng-ais-header
      classname="ais-PriceRanges-header ais-header"
      ng-reflect-class-name="ais-PriceRanges-header ais-hea"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-PriceRanges-body ais-body"
    >
      
          
      <ul
        class="ais-PriceRanges-list"
      >
        
            
        
        <li
          class="ais-PriceRanges-item"
          ng-reflect-ng-class="[object Object]"
        >
          
              &gt;= $ 1
            
        </li>
        <li
          class="ais-PriceRanges-item"
          ng-reflect-ng-class="[object Object]"
        >
          
              $ 10 - $ 20
            
        </li>
        <li
          class="ais-PriceRanges-item"
          ng-reflect-ng-class="[object Object]"
        >
          
              &lt;= $ 50
            
        </li>
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-PriceRanges-footer ais-footer"
      ng-reflect-class-name="ais-PriceRanges-footer ais-foo"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-price-ranges>
`;

exports[`PriceRanges renders markup without state 1`] = `
<ng-ais-price-ranges
  currency={[Function String]}
  formatLabel={[Function Function]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-PriceRanges"
  >
    
        
    <ng-ais-header
      classname="ais-PriceRanges-header ais-header"
      ng-reflect-class-name="ais-PriceRanges-header ais-hea"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-PriceRanges-body ais-body"
    >
      
          
      <ul
        class="ais-PriceRanges-list"
      >
        
            
        
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-PriceRanges-footer ais-footer"
      ng-reflect-class-name="ais-PriceRanges-footer ais-foo"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-price-ranges>
`;

exports[`PriceRanges renders refined values 1`] = `
<ng-ais-price-ranges
  currency={[Function String]}
  formatLabel={[Function Function]}
  searchInstance={[Function NgAisInstance]}
  state={[Function Object]}
  updateState={[Function Function]}
>
  
      <div
    class="ais-PriceRanges"
  >
    
        
    <ng-ais-header
      classname="ais-PriceRanges-header ais-header"
      ng-reflect-class-name="ais-PriceRanges-header ais-hea"
    >
      
      
      
      
    
    </ng-ais-header>
    
  
        
    <div
      class="ais-PriceRanges-body ais-body"
    >
      
          
      <ul
        class="ais-PriceRanges-list"
      >
        
            
        
        <li
          class="ais-PriceRanges-item ais-PriceRanges-item--selected"
          ng-reflect-ng-class="[object Object]"
        >
          
              &lt;= $ 20
            
        </li>
        
          
      </ul>
      
        
    </div>
    
  
        
    <ng-ais-footer
      classname="ais-PriceRanges-footer ais-footer"
      ng-reflect-class-name="ais-PriceRanges-footer ais-foo"
    >
      
      
      
      
    
    </ng-ais-footer>
    
      
  </div>
    
</ng-ais-price-ranges>
`;
